--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"file-loader": "6.2.0",
 		"handlebars": "^4.7.8",
 		"handlebars-loader": "^1.7.3",
+		"html-bundler-webpack-plugin": "^3.10.0",
 		"html-loader": "5.0.0",
 		"html-webpack-plugin": "5.6.0",
 		"mini-css-extract-plugin": "2.9.0",
