* chore(.prettierrc.json): update prettierrc with overrides for single quotes in JS files * feat(package-lock.json): change license from MIT to MPL * refactor(package.json): update scripts for start, build, and watch to use webpack directly without specifying config files

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,4 +1,12 @@
 {
 	"tabWidth": 4,
-	"useTabs": true
+	"useTabs": true,
+	"overrides": [
+		{
+			"files":["*.js"],
+			"options": {
+				"singleQuote": true
+			}
+		}
+	]
 }
