--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
 	"scripts": {
 		"lint:styles": "stylelint src/**/*.scss",
 		"lint:scripts": "eslint src/**/*js",
-		"lint": "npm run lint:styles; npm run lint:scripts",
-		"build": "cross-env NODE_ENV=production webpack --config webpack/webpack.config.prod.js",
-		"start": "cross-env NODE_ENV=development webpack serve --config webpack/webpack.config.dev.js"
+		"start": "cross-env NODE_ENV=development webpack serve",
+		"build": "cross-env NODE_ENV=production webpack",
+		"watch": "cross-env NODE_ENV=development webpack watch"
 	},
 	"keywords": [
 		"webpack",
@@ -18,7 +18,7 @@
 		"handlebars"
 	],
 	"author": "gabriela",
-	"license": "MIT",
+	"license": "MPL",
 	"devDependencies": {
 		"@babel/core": "7.24.4",
 		"@babel/eslint-parser": "7.24.1",
@@ -31,12 +31,9 @@
 		"cross-env": "7.0.3",
 		"css-loader": "7.1.1",
 		"dotenv": "16.4.5",
-		"dotenv-webpack": "8.1.0",
 		"eslint": "8.57.0",
 		"eslint-webpack-plugin": "4.1.0",
-		"file-loader": "6.2.0",
 		"handlebars": "^4.7.8",
-		"handlebars-loader": "^1.7.3",
 		"html-bundler-webpack-plugin": "^3.10.0",
 		"html-loader": "5.0.0",
 		"html-webpack-plugin": "5.6.0",
