--- a/package.json
+++ b/package.json
@@ -20,41 +20,39 @@
 		"scss"
 	],
 	"author": "gabriela",
-	"license": "MPL",
+	"license": "MIT",
 	"devDependencies": {
-		"@babel/core": "7.24.4",
-		"@babel/eslint-parser": "7.24.1",
+		"@babel/core": "7.25.2",
+		"@babel/eslint-parser": "7.25.1",
 		"@babel/plugin-syntax-dynamic-import": "7.8.3",
-		"@babel/plugin-transform-class-properties": "7.24.1",
-		"@babel/preset-env": "7.24.4",
+		"@babel/plugin-transform-class-properties": "7.24.7",
+		"@babel/preset-env": "7.25.3",
+		"@eslint/eslintrc": "^3.1.0",
+		"@eslint/js": "^9.9.0",
 		"babel-loader": "9.1.3",
 		"clean-webpack-plugin": "4.0.0",
 		"copy-webpack-plugin": "12.0.2",
 		"cross-env": "7.0.3",
-		"css-loader": "7.1.1",
+		"css-loader": "7.1.2",
 		"dotenv": "16.4.5",
-		"eslint": "8.57.0",
-		"eslint-webpack-plugin": "4.1.0",
+		"eslint": "9.9.0",
+		"eslint-webpack-plugin": "4.2.0",
+		"globals": "^15.9.0",
 		"handlebars": "^4.7.8",
-		"html-bundler-webpack-plugin": "^3.10.0",
-		"html-loader": "5.0.0",
-		"html-webpack-plugin": "5.6.0",
-		"mini-css-extract-plugin": "2.9.0",
+		"handlebars-helper-isactive": "^0.1.1",
+		"html-bundler-webpack-plugin": "^3.17.4",
+		"lodash": "^4.17.21",
 		"postcss-loader": "8.1.1",
-		"postcss-preset-env": "9.5.6",
+		"postcss-preset-env": "10.0.2",
 		"postcss-scss": "4.0.9",
-		"sass": "1.75.0",
-		"sass-loader": "14.2.1",
-		"style-loader": "4.0.0",
-		"stylelint": "16.3.1",
-		"stylelint-config-idiomatic-order": "10.0.0",
-		"stylelint-config-sass-guidelines": "11.1.0",
+		"sass": "1.77.8",
+		"sass-loader": "16.0.1",
+		"stylelint": "16.8.2",
 		"stylelint-config-standard-scss": "13.1.0",
-		"stylelint-order": "6.0.4",
-		"stylelint-webpack-plugin": "5.0.0",
-		"webpack": "5.91.0",
+		"stylelint-webpack-plugin": "5.0.1",
+		"webpack": "5.93.0",
 		"webpack-cli": "5.1.4",
 		"webpack-dev-server": "5.0.4",
-		"webpack-merge": "5.10.0"
+		"webpack-merge": "6.0.1"
 	}
 }
