--- a/package.json
+++ b/package.json
@@ -25,13 +25,11 @@
 		"@babel/core": "7.25.2",
 		"@babel/eslint-parser": "7.25.1",
 		"@babel/plugin-syntax-dynamic-import": "7.8.3",
-		"@babel/plugin-transform-class-properties": "7.24.7",
-		"@babel/preset-env": "7.25.3",
+		"@babel/plugin-transform-class-properties": "7.25.4",
+		"@babel/preset-env": "7.25.4",
 		"@eslint/eslintrc": "^3.1.0",
 		"@eslint/js": "^9.9.0",
 		"babel-loader": "9.1.3",
-		"clean-webpack-plugin": "4.0.0",
-		"copy-webpack-plugin": "12.0.2",
 		"cross-env": "7.0.3",
 		"css-loader": "7.1.2",
 		"dotenv": "16.4.5",
@@ -39,9 +37,7 @@
 		"eslint-webpack-plugin": "4.2.0",
 		"globals": "^15.9.0",
 		"handlebars": "^4.7.8",
-		"handlebars-helper-isactive": "^0.1.1",
 		"html-bundler-webpack-plugin": "^3.17.4",
-		"lodash": "^4.17.21",
 		"postcss-loader": "8.1.1",
 		"postcss-preset-env": "10.0.2",
 		"postcss-scss": "4.0.9",
@@ -49,10 +45,10 @@
 		"sass-loader": "16.0.1",
 		"stylelint": "16.8.2",
 		"stylelint-config-standard-scss": "13.1.0",
-		"stylelint-webpack-plugin": "5.0.1",
-		"webpack": "5.93.0",
+		"stylelint-webpack-plugin": "^5.0.1",
+		"webpack": "5.94.0",
 		"webpack-cli": "5.1.4",
-		"webpack-dev-server": "5.0.4",
+		"webpack-dev-server": "^5.0.4",
 		"webpack-merge": "6.0.1"
 	}
 }
