--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"@eslint/eslintrc": "^3.1.0",
 		"@eslint/js": "^9.9.0",
 		"babel-loader": "9.1.3",
+		"clean-webpack-plugin": "^4.0.0",
 		"cross-env": "7.0.3",
 		"css-loader": "7.1.2",
 		"dotenv": "16.4.5",
